environments/istio/basic-demo/homer/base/active/homer-portal-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer-portal
  labels:
    istio.io/rev: 1-18
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
