environments/istio/basic-demo/homer/base/active/homer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homer
  namespace: homer-portal
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: homer-portal
        port:
          number: 8080
